--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^10.16.4",
     "next": "14.0.2",
+    "next-seo": "^6.4.0",
     "react": "^18",
     "react-dom": "^18"
   },
