--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@vercel/postgres": "^0.5.1",
     "axios": "^1.6.1",
+    "dayjs": "^1.11.10",
     "framer-motion": "^10.16.4",
     "next": "14.0.2",
     "next-seo": "^6.4.0",
